tooling/lsp-server/examples/errors/alternation_no_rhs.strl
# Error Example: Alternation Lacks Right-Hand Side
# Expected: Error at line 4, character 3
# Message: "Alternation lacks right-hand side"

cat|